# serializer version: 1
# name: TestFeatureDepOptional.test_feature_spec_version_changes_when_optional_changes
  dict({
    'optional': 'ba903fd5',
    'required': 'b8c272b4',
  })
# ---
# name: TestFeatureDepOptional.test_optional_false_serializes_correctly
  dict({
    'feature': 'test/feature',
    'fields_mapping': dict({
      'mapping': dict({
        'exclude_fields': list([
        ]),
        'match_suffix': False,
        'type': 'default',
      }),
    }),
    'lineage': dict({
      'relationship': dict({
        'type': '1:1',
      }),
    }),
    'optional': False,
    'rename': None,
    'select': None,
    'sql_filters': None,
  })
# ---
# name: TestFeatureDepOptional.test_optional_true_serializes_correctly
  dict({
    'feature': 'test/feature',
    'fields_mapping': dict({
      'mapping': dict({
        'exclude_fields': list([
        ]),
        'match_suffix': False,
        'type': 'default',
      }),
    }),
    'lineage': dict({
      'relationship': dict({
        'type': '1:1',
      }),
    }),
    'optional': True,
    'rename': None,
    'select': None,
    'sql_filters': None,
  })
# ---
